--- a/style.css
+++ b/style.css
@@ -164,4 +164,69 @@ body {
     padding-top: 20px;
     color: dimgray;
   }
+
+  .container{
+    width:1400px;
+    margin: 0px auto;
+
+  }
+  
+  @media only screen and (max-width: 400px) and (min-width:300px) {
+    .imgaj{
+      width:1400px;
+    }
+   
+    
+    .topnav a {
+      text-align: center;
+    }
+
+  }
+  
+  @media only screen and (max-width: 500px) and (min-width: 400px)  {
+    .imgaj{
+      width:1400px
+    }
+  }
+
+  @media only screen and (min-width:500px) and (max-width:800px) {
+    .imgaj{
+      width:1400px
+    }
+  }
+
+  @media only screen and (min-width:800px) and (max-width:1100px) {
+    .imgaj{
+      width:1400px
+    }
+
+
+  }
+
+  @media only screen and (min-width:1100px) and (max-width:1500px) {
+    .container{
+      margin-right: 40px;
+    }
+    .topnav{
+      width:1400px
+    }
+    .imgaj{
+      width:1500px
+    }
+    .footer{
+      width:1500px
+    }
+    .mainfooter{
+      width:1500px
+    }
+  }
+
+  @media only screen and (min-width:1400px) and (max-width:1700px) {
+    .imgaj{
+      width:1900px;
+      height: 700px;
+    }
+  }
+
+
   
